--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,7 @@ environment:
     PYTHON_DEF: "C:\\Python38-x64"
     PYTHON_VERSION: "3.8"
     # Python versions to build wheels for
-    PYTHONVERS: C:\Python36-x64 C:\Python37-x64 C:\Python38-x64 C:\Python39-x64
+    PYTHONVERS: C:\Python27-x64 C:\Python27
     PYTHON_ARCH: "64"
     MSVC: "Visual Studio 16 2019"
 
